--- a/test-output/old/Hotel Room API Suite/classes.html
+++ b/test-output/old/Hotel Room API Suite/classes.html
@@ -214,6 +214,10 @@
 <td>testAddRoomsFromJson</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>testAddRoomUsingPOJO</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
